build only for linux amd64

--- a/.github/workflows/build-and-puslish-web.yml
+++ b/.github/workflows/build-and-puslish-web.yml
@@ -35,7 +35,8 @@ jobs:
           file: ./packages/web/Dockerfile
           push: true
           tags: tibboddit/bobarr-web:latest
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+          # platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
           cache-from: type=registry,ref=tibboddit/bobarr-web:latest
           cache-to: type=inline
 
