--- a/.github/workflows/build-and-publish-api.yml
+++ b/.github/workflows/build-and-publish-api.yml
@@ -35,7 +35,8 @@ jobs:
           file: ./packages/api/Dockerfile
           push: true
           tags: tibboddit/bobarr-api:latest
-          platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+          # platforms: linux/amd64,linux/arm/v6,linux/arm/v7,linux/arm64/v8
+          platforms: linux/amd64
           cache-from: type=registry,ref=tibboddit/bobarr-api:latest
           cache-to: type=inline
 
