--- a/packages/transmission/config/settings.json
+++ b/packages/transmission/config/settings.json
@@ -6,11 +6,16 @@
     "alt-speed-time-enabled": false,
     "alt-speed-time-end": 1020,
     "alt-speed-up": 50,
+    "announce-ip": "",
+    "announce-ip-enabled": false,
+    "anti-brute-force-enabled": false,
+    "anti-brute-force-threshold": 100,
     "bind-address-ipv4": "0.0.0.0",
     "bind-address-ipv6": "::",
     "blocklist-enabled": false,
     "blocklist-url": "http://www.example.com/blocklist",
     "cache-size-mb": 4,
+    "default-trackers": "",
     "dht-enabled": true,
     "download-dir": "/downloads/complete",
     "download-queue-enabled": true,
@@ -30,7 +35,7 @@
     "peer-port-random-high": 65535,
     "peer-port-random-low": 49152,
     "peer-port-random-on-start": false,
-    "peer-socket-tos": "default",
+    "peer-socket-tos": "le",
     "pex-enabled": true,
     "port-forwarding-enabled": true,
     "preallocation": 1,
@@ -45,15 +50,20 @@
     "rpc-enabled": true,
     "rpc-host-whitelist": "",
     "rpc-host-whitelist-enabled": false,
-    "rpc-password": "{1ddd3f1f6a71d655cde7767242a23a575b44c909n5YuRT.f",
+    "rpc-password": "{96e31205f1529ec2b65e52e6ad0c61bdd091bdc7aBk7wK99",
     "rpc-port": 9091,
+    "rpc-socket-mode": "0750",
     "rpc-url": "/transmission/",
     "rpc-username": "",
-    "rpc-whitelist": "127.0.0.1",
+    "rpc-whitelist": "",
     "rpc-whitelist-enabled": false,
     "scrape-paused-torrents-enabled": true,
+    "script-torrent-added-enabled": false,
+    "script-torrent-added-filename": "",
     "script-torrent-done-enabled": false,
     "script-torrent-done-filename": "",
+    "script-torrent-done-seeding-enabled": false,
+    "script-torrent-done-seeding-filename": "",
     "seed-queue-enabled": false,
     "seed-queue-size": 10,
     "speed-limit-down": 100,
@@ -61,8 +71,10 @@
     "speed-limit-up": 100,
     "speed-limit-up-enabled": false,
     "start-added-torrents": true,
+    "tcp-enabled": true,
+    "torrent-added-verify-mode": "fast",
     "trash-original-torrent-files": false,
-    "umask": 2,
+    "umask": "002",
     "upload-slots-per-torrent": 14,
     "utp-enabled": false,
     "watch-dir": "/watch",
