--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,13 +1,29 @@
 FROM mcr.microsoft.com/devcontainers/base:ubuntu
 
-# Best practice: Combine commands to reduce layers
+# Install essential tools
 RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && apt-get -y install --no-install-recommends \
     curl wget git git-lfs jq build-essential \
     apt-transport-https software-properties-common \
-    ca-certificates gnupg lsb-release \
+    ca-certificates gnupg lsb-release socat \
     && apt-get clean -y \
     && rm -rf /var/lib/apt/lists/*
+
+# Install Docker CLI and Docker Compose
+RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
+    && mkdir -p /etc/apt/keyrings \
+    && curl -fsSL https://download.docker.com/linux/ubuntu/gpg | gpg --dearmor -o /etc/apt/keyrings/docker.gpg \
+    && echo "deb [arch=$(dpkg --print-architecture) signed-by=/etc/apt/keyrings/docker.gpg] https://download.docker.com/linux/ubuntu $(lsb_release -cs) stable" > /etc/apt/sources.list.d/docker.list \
+    && apt-get update \
+    && apt-get install -y docker-ce-cli docker-buildx-plugin docker-compose-plugin \
+    && apt-get clean -y \
+    && rm -rf /var/lib/apt/lists/* \
+    && ln -s /usr/libexec/docker/cli-plugins/docker-compose /usr/local/bin/docker-compose || true
+
+# Create docker socket directory
+RUN mkdir -p /var/run/ \
+    && touch /var/run/docker-host.sock \
+    && ln -s /var/run/docker-host.sock /var/run/docker.sock
 
 # Install Node.js with nvm
 ENV NVM_DIR=/usr/local/share/nvm
@@ -18,31 +34,14 @@ RUN mkdir -p ${NVM_DIR} \
     && nvm alias default lts/* \
     && npm install -g yarn pnpm
 
-# Install PHP in smaller batches to avoid disk space issues
-RUN apt-get update && export DEBIAN_FRONTEND=noninteractive \
-    && apt-get -y install --no-install-recommends php php-cli php-common \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
-    && apt-get update \
-    && apt-get -y install --no-install-recommends php-curl php-mbstring php-mysql \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
-    && apt-get update \
-    && apt-get -y install --no-install-recommends php-xml php-zip php-bcmath \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/* \
-    && apt-get update \
-    && apt-get -y install --no-install-recommends php-gd php-intl php-sqlite3 \
-    && apt-get clean -y && rm -rf /var/lib/apt/lists/*
-
-# Install Composer
-RUN curl -sS https://getcomposer.org/installer | php -- --install-dir=/usr/local/bin --filename=composer
-
 # Set up user and workspace
 ARG USERNAME=vscode
 ARG USER_UID=1000
 ARG USER_GID=$USER_UID
-RUN groupadd --gid $USER_GID $USERNAME \
-    && useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME \
-    && mkdir -p /workspace /workspace/.mcp \
-    && chown -R $USERNAME:$USERNAME /workspace \
+RUN if ! getent group ${USERNAME}; then groupadd --gid $USER_GID $USERNAME; fi \
+    && if ! getent passwd ${USERNAME}; then useradd -s /bin/bash --uid $USER_UID --gid $USER_GID -m $USERNAME; fi \
+    && mkdir -p /workspaces \
+    && chown -R $USERNAME:$USERNAME /workspaces \
     && echo $USERNAME ALL=\(root\) NOPASSWD:ALL > /etc/sudoers.d/$USERNAME \
     && chmod 0440 /etc/sudoers.d/$USERNAME
 
@@ -50,6 +49,13 @@ RUN groupadd --gid $USER_GID $USERNAME \
 RUN echo 'export NVM_DIR="/usr/local/share/nvm"' >> /home/$USERNAME/.bashrc \
     && echo '[ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"' >> /home/$USERNAME/.bashrc
 
+# Add container entrypoint
+COPY entrypoint.sh /usr/local/bin/entrypoint.sh
+RUN chmod +x /usr/local/bin/entrypoint.sh
+
 # Switch to non-root user
 USER $USERNAME
-WORKDIR /workspace
+WORKDIR /workspaces/bobarr
+
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
+CMD ["sleep", "infinity"]
