--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "lint": "yarn eslint --ext .ts,.tsx packages/api packages/web"
   },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^4.10.0",
-    "@typescript-eslint/parser": "^4.10.0",
-    "babel-eslint": "^10.1.0",
-    "concurrently": "^5.3.0",
-    "eslint": "^7.7.0",
-    "eslint-config-algolia": "^16.0.0",
-    "eslint-config-prettier": "^7.0.0",
+    "@typescript-eslint/eslint-plugin": "8.30.1",
+    "@typescript-eslint/parser": "8.30.1",
+    "@babel/eslint-parser": "^7.20.0",
+    "concurrently": "9.1.2",
+    "eslint": "9.24.0",
+    "eslint-config-algolia": "23.2.1",
+    "eslint-config-prettier": "10.1.2",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-import": "^2.22.0",
-    "eslint-plugin-prettier": "^3.1.4",
+    "eslint-plugin-prettier": "5.2.6",
     "eslint-plugin-react": "^7.20.6",
-    "eslint-plugin-react-hooks": "^4.1.0",
-    "prettier": "^2.1.1",
-    "typescript": "^4.0.2"
+    "eslint-plugin-react-hooks": "5.2.0",
+    "prettier": "3.5.3",
+    "typescript": "5.8.3"
   }
 }
