--- a/.env
+++ b/.env
@@ -26,3 +26,4 @@ DEBUG_REDIS=false
 
 # see https://github.com/iam4x/bobarr/issues/128
 # WEB_UI_API_URL=http://yourdomain.com/api
+WEB_UI_API_URL=http://localhost:4000/api
