--- a/packages/api/package.json
+++ b/packages/api/package.json
@@ -35,6 +35,7 @@
     "graphql-bigint": "^1.0.0",
     "graphql-tools": "^6.1.0",
     "ioredis": "^4.16.2",
+    "jsonwebtoken": "^9.0.2",
     "leven": "^3.1.0",
     "lib-get-redirects": "^1.0.0",
     "lodash": "^4.17.19",
@@ -60,6 +61,7 @@
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.3",
     "@types/graphql-bigint": "^1.0.0",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash": "^4.14.149",
     "@types/node": "^14.6.0",
     "bullmq": "^1.9.0",
