--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -6,18 +6,26 @@ services:
       context: ./packages/api
     command: yarn dev
     volumes:
-      - ./packages/api:/usr/src/app
+      - /workspaces/bobarr/packages/api:/usr/src/app
       - api_node_modules:/usr/src/app/node_modules
       - api_build:/usr/src/app/dist
+    ports:
+      - 3001:3001
 
   web:
     build:
       context: ./packages/web
     command: yarn dev
     volumes:
-      - ./packages/web:/usr/src/app
+      - /workspaces/bobarr/packages/web:/usr/src/app
       - web_node_modules:/usr/src/app/node_modules
       - web_build:/usr/src/app/.next
+    ports:
+      - 3000:3000
+    environment:
+      - NODE_ENV=development
+      - NEXT_TELEMETRY_DISABLED=1
+      - WEB_UI_API_URL=http://localhost:4000/graphql
 
   postgres:
     ports:
