--- a/packages/web/codegen.yml
+++ b/packages/web/codegen.yml
@@ -1,5 +1,5 @@
 overwrite: true
-schema: "http://api:4000/graphql"
+schema: "http://localhost:4000/graphql"
 documents: "{queries,mutations}/**/*.graphql"
 generates:
   utils/graphql.tsx:
