--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -11,48 +11,48 @@
     "gql-gen": "graphql-codegen --config codegen.yml"
   },
   "dependencies": {
-    "@ant-design/icons": "^4.0.5",
+    "@ant-design/icons": "6.0.0",
     "@apollo/client": "^3.1.3",
-    "antd": "^4.0.0",
+    "antd": "5.24.7",
     "classnames": "^2.2.6",
     "dayjs": "^1.8.23",
     "fontfaceobserver": "^2.1.0",
-    "graphql": "^15.3.0",
+    "graphql": "16.10.0",
     "graphql-tag": "^2.10.3",
-    "isomorphic-unfetch": "^3.0.0",
+    "isomorphic-unfetch": "4.0.2",
     "lodash": "^4.17.19",
-    "next": "^9.5.2",
+    "next": "15.3.0",
     "prettysize": "^2.0.0",
     "pure-react-carousel": "^1.27.0",
-    "react": "16.13.1",
+    "react": "19.1.0",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "16.13.1",
-    "react-icons": "^3.9.0",
+    "react-dom": "19.1.0",
+    "react-icons": "5.5.0",
     "react-masonry-component": "^6.2.1",
     "react-modal": "^3.11.2",
     "styled-components": "^5.0.1",
     "styled-reset": "^4.1.2",
-    "throttle-debounce": "^2.1.0",
-    "yarn": "^1.22.4"
+    "throttle-debounce": "5.0.2",
+    "yarn": "1.22.22"
   },
   "devDependencies": {
-    "@graphql-codegen/add": "^2.0.2",
-    "@graphql-codegen/cli": "^1.13.1",
-    "@graphql-codegen/fragment-matcher": "2.0.1",
-    "@graphql-codegen/introspection": "1.18.1",
-    "@graphql-codegen/typescript": "1.19.0",
-    "@graphql-codegen/typescript-operations": "1.17.12",
-    "@graphql-codegen/typescript-react-apollo": "2.2.1",
+    "@graphql-codegen/add": "5.0.3",
+    "@graphql-codegen/cli": "4.0.0",
+    "@graphql-codegen/fragment-matcher": "5.1.0",
+    "@graphql-codegen/introspection": "4.0.3",
+    "@graphql-codegen/typescript": "4.1.6",
+    "@graphql-codegen/typescript-operations": "4.6.0",
+    "@graphql-codegen/typescript-react-apollo": "4.3.2",
     "@types/classnames": "^2.2.10",
-    "@types/fontfaceobserver": "^0.0.6",
+    "@types/fontfaceobserver": "2.1.3",
     "@types/lodash": "^4.14.149",
-    "@types/node": "^14.14.14",
+    "@types/node": "18.19.86",
     "@types/react": "^17.0.0",
     "@types/react-beautiful-dnd": "^13.0.0",
     "@types/styled-components": "^5.1.7",
-    "@types/throttle-debounce": "^2.1.0",
-    "babel-plugin-styled-components": "^1.10.7",
-    "concurrently": "^5.1.0",
-    "typescript": "^4.0.2"
+    "@types/throttle-debounce": "5.0.2",
+    "babel-plugin-styled-components": "2.1.4",
+    "concurrently": "9.1.2",
+    "typescript": "5.8.3"
   }
 }
